Add UI dependencies, create UI tests.

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,23 +1,10 @@
 {
-  "env": {
-    "es6": true,
-    "node": true
-  },
-  "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/eslint-recommended"
-  ],
-  "globals": {
-    "Atomics": "readonly",
-    "SharedArrayBuffer": "readonly"
-  },
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaVersion": 11,
-    "sourceType": "module"
-  },
-  "plugins": ["@typescript-eslint"],
+  "extends": "react-app",
+  "plugins": ["react-hooks"],
   "rules": {
-    "no-unused-vars": ["warn"]
+    "import/no-anonymous-default-export": 0,
+    "react-hooks/exhaustive-deps": "warn",
+    "react-hooks/rules-of-hooks": "error",
+    "semi": "error"
   }
 }
