--- a/package.json
+++ b/package.json
@@ -13,19 +13,23 @@
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
     "electron": "11.0.2",
-    "enzyme-adapter-react-16": "^1.15.5",
     "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
     "eslint": "^7.14.0",
     "prettier": "^2.2.0",
     "react-scripts-postcss": "4.0.0-mod1",
-    "stylelint-config-recommended": "^3.0.0",
-    "stylelint": "^13.7.2"
+    "stylelint": "^13.7.2",
+    "stylelint-config-recommended": "^3.0.0"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "glob": "^7.1.6",
     "jsdom": "^16.4.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "react-router-dom": "^5.2.0",
+    "react-transition-group": "^4.4.1"
   },
   "scripts": {
     "start": "set PORT=80 && react-scripts start",
