--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
+    "concurrently": "^5.3.0",
     "electron": "11.0.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
@@ -21,7 +22,8 @@
     "react-snap": "^1.23.0",
     "source-map-explorer": "^2.5.0",
     "stylelint": "^13.7.2",
-    "stylelint-config-recommended": "^3.0.0"
+    "stylelint-config-recommended": "^3.0.0",
+    "wait-on": "^5.2.0"
   },
   "dependencies": {
     "classnames": "^2.2.6",
@@ -33,12 +35,11 @@
     "react-transition-group": "^4.4.1"
   },
   "scripts": {
-    "start": "set PORT=80 && react-scripts start",
+    "start": "concurrently \"set BROWSER=none && react-scripts start\" \"wait-on http://localhost:3000 && set ELECTRON_DISABLE_SECURITY_WARNINGS=true && electron .\"",
     "build": "react-scripts build",
     "postbuild": "react-snap",
     "test": "react-scripts test --env=jsdom --watchAll --verbose --silent",
     "eject": "react-scripts eject",
-    "electron": "set ELECTRON_DISABLE_SECURITY_WARNINGS=true && electron .",
     "format": "prettier src --write",
     "lint": "eslint src --fix",
     "analyze": "source-map-explorer 'build/static/js/*.js'"
