--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^11.1.5",
     "@testing-library/user-event": "^12.8.1",
     "concurrently": "^6.0.0",
+    "electron": "^12.0.0",
     "electron-builder": "^22.10.5",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
@@ -28,7 +29,6 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
-    "electron": "12.0.0",
     "glob": "^7.1.6",
     "jsdom": "^16.5.0",
     "react": "^17.0.1",
@@ -37,17 +37,21 @@
     "react-transition-group": "^4.4.1"
   },
   "scripts": {
-    "start": "concurrently \"set BROWSER=none && react-scripts start\" \"wait-on http://localhost:3000 && set ELECTRON_DISABLE_SECURITY_WARNINGS=true && set ELECTRON_START_URL=http://localhost:3000 && electron .\"",
+    "start": "concurrently \"set BROWSER=none && react-scripts start\" \"wait-on http://localhost:3000 && set ELECTRON_START_URL=http://localhost:3000 && electron .\"",
     "build": "react-scripts build",
-    "postbuild": "react-snap",
-    "package": "rimraf dist && electron-builder",
-    "test": "react-scripts test --env=jsdom --watchAll --verbose --silent",
+    "postbuild": "react-snap && npm run package",
+    "package": "rimraf dist && electron-builder && rimraf build",
+    "test": "react-scripts test --env=jsdom --watchAll --verbose",
     "eject": "react-scripts eject",
-    "format": "prettier src --write",
-    "lint": "eslint src --fix",
+    "lint": "eslint src && prettier src --check",
+    "lint-fix": "eslint src --fix && prettier src --write src",
     "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "reactSnap": {
+    "puppeteerArgs": [
+      "--no-sandbox",
+      "--disable-setuid-sandbox"
+    ],
     "skipThirdPartyRequests": true,
     "headless": true,
     "crawl": true,
