--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -16,5 +16,5 @@ jobs:
         with:
           node-version: '14'
       - run: npm install
-      - run: npm test --watchAll=false
+      - run: npm test:ci
       - run: npm lint
