--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,5 +2,6 @@
   "compilerOptions": {
     "baseUrl": "src",
     "module": "commonjs"
-  }
+  },
+  "include": ["src", ".storybook/StoryContainer.js"]
 }
