--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.1.5",
     "@testing-library/user-event": "^12.8.1",
+    "babel-loader": "8.1.0",
     "concurrently": "^6.0.0",
     "electron": "^12.0.0",
     "electron-builder": "^22.10.5",
