--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.1.5",
     "@testing-library/user-event": "^12.8.1",
-    "babel-loader": "8.1.0",
     "concurrently": "^6.0.0",
     "electron": "^12.0.0",
     "electron-builder": "^22.10.5",
@@ -50,7 +49,7 @@
     "postbuild": "react-snap && npm run package",
     "package": "rimraf dist && electron-builder --windows && rimraf build",
     "test": "react-scripts test --env=jsdom --watchAll --verbose",
-    "test:ci": "react-scripts test --env=jsdom --watchAll=false --verbose",
+    "test:ci": "set SKIP_PREFLIGHT_CHECK=true && react-scripts test --env=jsdom --watchAll=false --verbose",
     "eject": "react-scripts eject",
     "lint": "eslint src && prettier src --check",
     "lint-fix": "eslint src --fix && prettier src --write",
