--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,6 +15,14 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
-      - run: npm install
-      - run: npm run test:ci
-      - run: npm run lint
+
+      - name: Install Dependencies
+        run: npm install
+
+      - name: Run Tests
+        run: npm run test:ci
+          env:
+            SKIP_PREFLIGHT_CHECK: true
+
+      - name: Check for regressions
+        run: npm run lint
