--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "postbuild": "react-snap && npm run package",
     "package": "rimraf dist && electron-builder --windows && rimraf build",
     "test": "react-scripts test --env=jsdom --watchAll --verbose",
-    "test:ci": "set SKIP_PREFLIGHT_CHECK=true && react-scripts test --env=jsdom --watchAll=false --verbose",
+    "test:ci": "react-scripts test --env=jsdom --watchAll=false --verbose",
     "eject": "react-scripts eject",
     "lint": "eslint src && prettier src --check",
     "lint-fix": "eslint src --fix && prettier src --write",
