--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -8,8 +8,8 @@ on:
       - master
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
+  test-build:
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
@@ -26,3 +26,6 @@ jobs:
 
       - name: Check for regressions
         run: npm run lint
+
+      - name: Check build health
+        run: npm run build
