--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@testing-library/react": "^11.1.5",
     "@testing-library/user-event": "^12.8.3",
     "concurrently": "^6.0.0",
-    "electron": "^12.0.0",
+    "electron": "^12.0.1",
     "electron-builder": "^22.10.5",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
+    "event-stream": "^4.0.1",
     "glob": "^7.1.6",
     "jsdom": "^16.5.0",
     "react": "^17.0.1",
