--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-transition-group": "^4.4.1",
-    "three": "^0.126.1"
+    "three": "^0.126.1",
+    "worker-loader": "^3.0.8"
   },
   "scripts": {
     "start": "concurrently \"set BROWSER=none && react-scripts start\" \"wait-on http://localhost:3000 && set ELECTRON_START_URL=http://localhost:3000 && electron .\"",
@@ -57,6 +58,11 @@
     "lint-fix": "eslint src --fix && prettier src --write",
     "storybook": "start-storybook -p 9009 -s public",
     "analyze": "source-map-explorer 'build/static/js/*.js'"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.worker.js": "src/tests/__mocks__/worker.js"
+    }
   },
   "reactSnap": {
     "puppeteerArgs": [
