--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-transition-group": "^4.4.1",
+    "tesseract.js": "^2.1.4",
     "three": "^0.126.1",
     "worker-loader": "^3.0.8"
   },
