--- a/api/package.json
+++ b/api/package.json
@@ -2,7 +2,9 @@
   "name": "api",
   "description": "Serverless functions for videre tracker",
   "scripts": {
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "jest ./*.js --watchAll --verbose",
+    "test:ci": "jest ./*.js --verbose"
   },
   "dependencies": {
     "dompurify": "^2.2.7",
@@ -11,7 +13,10 @@
   },
   "devDependencies": {
     "eslint": "^7.22.0",
-    "eslint-plugin-promise": "^4.3.1"
+    "eslint-plugin-promise": "^4.3.1",
+    "express": "^4.17.1",
+    "jest": "^26.6.3",
+    "supertest": "^6.1.3"
   },
   "private": true
 }
