--- a/api/package.json
+++ b/api/package.json
@@ -1,18 +1,7 @@
 {
   "name": "api",
   "description": "Serverless functions for videre tracker",
-  "scripts": {
-    "lint": "eslint .",
-    "test": "jest tests --watchAll --verbose --silent",
-    "test:ci": "jest tests --verbose --silent"
-  },
-  "dependencies": {
-    "dompurify": "^2.2.7",
-    "jpeg-autorotate": "^7.1.1",
-    "jsdom": "^16.5.1",
-    "node-fetch": "^2.6.1",
-    "tesseract.js-core": "^2.2.0"
-  },
+  "private": true,
   "devDependencies": {
     "eslint": "^7.22.0",
     "eslint-plugin-promise": "^4.3.1",
@@ -20,5 +9,14 @@
     "jest": "^26.6.3",
     "supertest": "^6.1.3"
   },
-  "private": true
+  "dependencies": {
+    "dompurify": "^2.2.7",
+    "jsdom": "^16.5.1",
+    "tesseract.js-core": "^2.2.0"
+  },
+  "scripts": {
+    "lint": "eslint .",
+    "test": "jest tests --watchAll --verbose",
+    "test:ci": "jest tests --verbose"
+  }
 }
