--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@storybook/react": "^6.1.21",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.1.5",
-    "@testing-library/user-event": "^12.8.3",
+    "@testing-library/user-event": "^13.0.7",
     "concurrently": "^6.0.0",
     "electron": "^12.0.1",
     "electron-builder": "^22.10.5",
@@ -31,17 +31,17 @@
     "source-map-explorer": "^2.5.2",
     "stylelint": "^13.12.0",
     "stylelint-config-recommended": "^4.0.0",
-    "wait-on": "^5.2.1"
+    "wait-on": "^5.3.0"
   },
   "dependencies": {
     "classnames": "^2.2.6",
     "event-stream": "^4.0.1",
     "jsdom": "^16.5.1",
-    "ocrad.js": "^0.0.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-transition-group": "^4.4.1",
+    "tesseract.js-core": "^2.2.0",
     "three": "^0.126.1",
     "worker-loader": "^3.0.8"
   },
